# production

./: .editorconfig  .gitignore  .prettierignore  BUILD.bazel  README.md  WORKSPACE  flake.nix  package.json  shell.nix
assets/: .gitignore  README.md  base.nix  base.tf  buckbeak.nix  default.nix  dns.nix  iam.nix  nixos.nix  oldserver.nix  variables.nix  variables.tf
nix/: README.md  shell.nix  terraform-apps.nix  treefmt.nix
nixos/: README.md
nixos/common/: default.nix  users.nix
nixos/hosts/buckbeak/: default.nix
nixos/hosts/buckbeak/services/: default.nix  monitoring.nix  monitoring_rules.nix  nginx.map  wordpress-assets.json  wordpress.nix
pkgs/: default.nix
pkgs/astra-smt/: README.md  default.nix  functions.php  style.css  youtube.js
pkgs/wp_plugin_info/: pyproject.toml
pkgs/wp_plugin_info/src/wp_plugin_info/: main.py
servers/: inventory
servers/environments/: 000_default
servers/environments/dev/: hosts
servers/environments/dev/group_vars/: 000_default
servers/environments/dev/host_vars/: dev-1.smartmousetravel.com
servers/environments/prod/: hosts
servers/environments/prod/group_vars/: web
servers/environments/prod/host_vars/: www-prod-1.smartmousetravel.com
servers/roles/docker/tasks/: main.yml
servers/roles/web/defaults/: main.yml
servers/roles/web/files/: htpasswd  smartmouse-web.service
servers/roles/web/handlers/: main.yml
servers/roles/web/tasks/: main.yml
servers/roles/web/templates/: listmonk.toml  (+2 more)
theme/: BUILD.bazel  README.md  functions.php  style.css  youtube.css  youtube.js
theme/assets/: BUILD.bazel
(+5 files in other folders)
