load("@npm//postcss-cli:index.bzl", "postcss")
load("@npm//terser:index.bzl", "terser")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "theme",
    srcs = [
        "functions.php",
        "style.css",
        ":compile-css",
        ":compile-js",
        "//theme/assets",
    ],
    mode = "0644",
    package_file_name = "astra-smt.tar",
    strip_prefix = ".",
)

postcss(
    name = "compile-css",
    outs = ["youtube.min.css"],
    args = [
        "theme/youtube.css",
        "--config",
        ".",
        "--output",
        "$(execpath youtube.min.css)",
    ],
    data = [
        "youtube.css",
        "//:postcss.config.js",
        "@npm//cssnano",
    ],
)

terser(
    name = "compile-js",
    outs = ["youtube.min.js"],
    args = [
        "--compress",
        "--mangle",
        "--output",
        "$(execpath youtube.min.js)",
        "--",
        "theme/youtube.js",
    ],
    data = ["youtube.js"],
)
